--- a/css/styles.css
+++ b/css/styles.css
@@ -163,7 +163,7 @@ img {
     text-transform:uppercase;
     color: var(--brand-color-three);
     background-color: #2F303A;
-    background-image: linear-gradient(rgba(35, 35, 41, 0.6), rgba(47, 48, 58, 0.4)), url(/images/studio.jpg);
+    background-image: linear-gradient(rgba(35, 35, 41, 0.6), rgba(47, 48, 58, 0.4)), url(./images/studio.jpg);
 }
 
 .hero-box {
@@ -300,8 +300,10 @@ img {
 }
 
 .jop-list-item {
-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-border-radius: 0px 0px 4px 4px;
+    background-color: var(--brand-color-three);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+    
 }
 
 
