--- a/css/styles.css
+++ b/css/styles.css
@@ -82,9 +82,14 @@ img {
     /* outline-style: auto; */
 
 
-/*Стилы для index.html*/
+/*Стилі для index.html*/
 
 /*--------------------header--------------------*/
+
+.header {
+    border: 1px solid #ECECEC;
+
+}
 
 .heder-box {
     display: flex;
@@ -128,33 +133,35 @@ img {
     color: var(--brand-color-two);
     }
 
+
+
 .nav-link-contacts {
     color: var(--brand-tekst-color);
     text-decoration: none;
+    fill: var(--brand-tekst-color);
 }
 
-.nav-link:focus, .nav-link:hover {
-    color: var(--brand-color)}
+.nav-link:focus {color: var(--brand-color);}
+.nav-link:hover {color: var(--brand-color);}
 
-.nav-link-contacts:focus, .nav-link-contacts:hover {
-        color: var(--brand-color);
-    }
+
+.nav-link-contacts:hover {color: var(--brand-color); fill: var(--brand-color);}
+.nav-link-contacts:focus {color: var(--brand-color); fill: var(--brand-color);}
+
+
     
 .contact {
     display: flex;
+    justify-content: center;
+    align-items: center;
     gap: 30px;
     margin-top: 32px;
     margin-bottom: 32px;
 }
 
-.navigation-social-icon, {
-    fill: var(--brand-tekst-color);
-    text-align: center; 
+.contact-navigation {
+    
 }
-
-.social-icon:hover {fill: var(--brand-color);}
-
-.social-icon:focus {fill: var(--brand-color);}
 
 
 /*------------------hero--------------------*/
@@ -163,7 +170,7 @@ img {
     text-transform:uppercase;
     color: var(--brand-color-three);
     background-color: #2F303A;
-    background-image: linear-gradient(rgba(35, 35, 41, 0.6), rgba(47, 48, 58, 0.4)), url(./images/studio.jpg);
+    background-image: linear-gradient(rgba(35, 35, 41, 0.6), rgba(47, 48, 58, 0.4)), url(../images/studio.jpg);
 }
 
 .hero-box {
@@ -225,6 +232,14 @@ img {
     flex-wrap: nowrap;
     flex-basis: calc((100% - 90px) / 4);
   }
+
+  .navigation-social-icon {
+    display: flex;
+    fill: var(--brand-tekst-color);
+    margin-right: 10px;
+  }
+
+  .social-icon {margin-right: 10px;}
 
   .features-list-box {
     min-width: 270px;
@@ -490,6 +505,8 @@ border: none;
 
 .btn:hover, .btn:focus {color: var(--brand-color-three);
     background-color: var(--brand-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+border-radius: 4px;
 }
 
 .aside {
